--- a/shadowsocks/Changelog.txt
+++ b/shadowsocks/Changelog.txt
@@ -1,5 +1,15 @@
 Koolshare Asuswrt-Merlin shadowsocks Changelog
 ===========================================
+4.0.0
+   - fix	修复某些机器开机启动后iptables规则被多次添加，影响如koolproxy等其它插件的启动；
+   - fix	修复【内部网络(lan)】-【DHCP服务器】-【DNS 及 WINS 服务器设置】内DNS Server 2无法清空的问题；
+   - fix	修复通过vmess://链接添加v2ray节点时无法添加tls信息的bug；
+   - update	添加域名黑白名单格式检查，错误格式的域名不会添加进对应名单并给予相应提示；
+   - update	同步最新规则：gfwlist.conf, chnroute.txt, cdn.txt；
+   - update	更新v2ray二进制版本为v3.35；
+   - update	更新kcptun二进制版本为20180810
+   - remove	移除多余无用的socks5开机启动文件；
+
 3.9.9
    - update	添加jitterentropy-rngd，以提供足够的熵来快速生成高质量的随机数，保证ss-libev启动；
    - fix	修复带订阅对某些机场不支持的情况；
